# gwen-lang

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh.md  TRY_GWEN.md  go.mod  go.sum  pyproject.toml
assets/brand/: README.md
cmd/gwen/: main.go  main_test.go
docs/: README.en.md  README.md  appendix.md  compiler.en.md  compiler.md  concurrency.md  design.md  memory.md  modules.md  oop.md  philosophy.en.md  philosophy.md  release.md  scope.md  semantics.md  stdlib.md  syntax.md  tracking.md  types.md
examples/: arena.gw  arena_memory.gw  binary_search.gw  binary_search_float.gw  dict_basics.gw  explicit_types.gw  fibonacci.gw  file_io.gw  gcd.gw  global_scope.gw  hello.gw  higher_order.gw  http_get.gw  http_request.gw  http_server.gw  json_basics.gw  lis.gw  match_strict.gw  merge_sort.gw  money.gw  nested_scope.gw  precision_test.gw  quicksort.gw  runtime_basics.gw  segment_tree.gw  session_notes.gw  showcase.gw  sqlite_basics.gw  state_parallel.gw  var_block.gw
examples/docs_site/: README.md  main.gw  site_content.gw
examples/http_server_public/: app.css
gwen/: __init__.py  __main__.py  ast_nodes.py  checker.py  interpreter.py  lexer.py  parser.py  stdlib_catalog.py
scripts/: try_ledger_app.ps1  try_ledger_app.sh
tests/: test_cli.py  test_examples.py  test_index_assignment.py  test_interpreter.py  test_lexer.py  test_multifile_modules.py  test_oop.py  test_parser.py
vscode-extension/: LICENSE  README.md  gwen-lang-0.1.0.vsix  gwen-lang-0.2.0.vsix  gwen-lang-0.2.1.vsix  install.sh  language-configuration.json  package.json
(+56 files in other folders)
